--- a/vue3TestProject/vue-project/package.json
+++ b/vue3TestProject/vue-project/package.json
@@ -14,14 +14,17 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "5.9.55",
     "@mdi/js": "^7.4.47",
+    "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "@tiptap/vue-3": "^2.9.1",
     "axios": "^1.6.7",
     "date-fns": "^4.1.0",
-    "quill": "^2.0.2",
     "roboto-fontface": "*",
+    "tiptap-extension-resize-image": "^1.1.9",
     "vue": "^3.4.15",
+    "vue-pagination-2": "^3.1.0",
     "vue-router": "^4.2.5",
-    "vue3-quill": "^0.3.1",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.7.3",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
