--- a/vue3TestProject/src/main/resources/application.properties
+++ b/vue3TestProject/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-upload.dir=uploads/
+upload.dir=/home/ec2-user/uploads/
